--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     interest rates and terms and conditions of the finance are highly competitive.
                 </h3>
             </div>
-            <a class="sections-a">
+            <a class="sections-a" href="what-we-offer.html#section-5">
                 <button class="read-more">Read more</button>
             </a>
         </div>
