--- a/what-we-offer.html
+++ b/what-we-offer.html
@@ -151,7 +151,7 @@
                     Financing is available for all agriculture related moveable assets with repayment terms of up to 60 months.
                 </h3>
             </div>
-            <a class="sections-a">
+            <a class="sections-a" href="index.html#section-2">
                 <button class="read-more">Read less</button>
             </a>
         </div>
