--- a/our-team.html
+++ b/our-team.html
@@ -125,31 +125,43 @@
                 <img src="images/team/elias.jpg">
                 <h2>Elias Masilela</h2>
                 <h3>Executive Chariman</h3>
-                <h4>BA Social Sciences (University of Swaziland)</h4>
+                <h4>
+                    BA Social Sciences<br>
+                    M Social Sciences in Economic Policy and Analysis
+                </h4>
             </div>
             <div class="content-container">
                 <img src="images/team/johan.jpg">
                 <h2>Johan du Toit</h2>
                 <h3>Joint Chief Executive Officer (Operations)</h3>
-                <h4>B.Comm (Agric economics) (Stellenbosch)</h4>
+                <h4>
+                    B.Comm (Agric economics)<br>
+                    Hons B&A, MBA
+                </h4>
             </div>
             <div class="content-container">
                 <img src="images/team/faans.jpg">
                 <h2>Faans Roos</h2>
                 <h3>Joint Chief Executive Officer (Finance)</h3>
-                <h4>B.Acc (Hons) (Stellenbosch), CA (SA)</h4>
+                <h4>
+                    B.Acc (Hons)<br>
+                    CA (SA)
+                </h4>
             </div>
             <div class="content-container">
                 <img src="images/team/christiaan.jpg">
                 <h2>Christiaan Buys</h2>
                 <h3>Director: Risk Management</h3>
-                <h4>BSc (Maths) (Stellenbosch)</h4>
+                <h4>BSc (Maths)</h4>
             </div>
             <div class="content-container">
                 <img src="images/team/piet.jpg">
                 <h2>Piet Krynauw</h2>
-                <h3>Non-executive Director (Chairman of the Credit Committee)</h3>
-                <h4>B.Comm, Hons (B&A) MBA (Stellenbosch)</h4>
+                <h3>
+                    Non-executive Director<br>
+                    (Chairman of the Credit Committee)
+                </h3>
+                <h4>B.Comm, Hons (B&A) MBA</h4>
             </div>
         </div>
         <h2 id="heading-3">Staff</h2>
@@ -181,7 +193,7 @@
             <div class="content-container">
                 <img src="images/team/willie.jpg">
                 <h2>Willie De Lange</h2>
-                <h3>Finance<br>CEO: Capital Harvest Emerging Farmer</h3>
+                <h3>Finance<br>Corporate Business Manager</h3>
                 <h4>B.Comm (Commercial accounting)</h4>
             </div>
             <div class="content-container">
@@ -193,7 +205,7 @@
             <div class="content-container">
                 <img src="images/team/nadine.jpg">
                 <h2>Nadine Solomons</h2>
-                <h3>Portfolio Manager</h3>
+                <h3>Risk Portfolio Manager</h3>
                 <h4>National Diploma: Management</h4>
             </div>
             <div class="content-container">
