--- a/our-team.html
+++ b/our-team.html
@@ -193,7 +193,7 @@
             <div class="content-container">
                 <img src="images/team/willie.jpg">
                 <h2>Willie De Lange</h2>
-                <h3>Finance<br>Corporate Business Manager</h3>
+                <h3>Corporate Business Manager</h3>
                 <h4>B.Comm (Commercial accounting)</h4>
             </div>
             <div class="content-container">
