--- a/our-team.html
+++ b/our-team.html
@@ -161,7 +161,10 @@
                     Non-executive Director<br>
                     (Chairman of the Credit Committee)
                 </h3>
-                <h4>B.Comm, Hons (B&A) MBA</h4>
+                <h4>
+                    B.Comm<br>
+                    Hons B&A, MBA
+                </h4>
             </div>
         </div>
         <h2 id="heading-3">Staff</h2>
@@ -170,7 +173,10 @@
                 <img src="images/team/albert.jpg">
                 <h2>Albert Smith</h2>
                 <h3>Credit Head - Alternate director to F Roos and J du Toit</h3>
-                <h4>B.Comm (Management Accounting) (Hons), ACMA</h4>
+                <h4>
+                    B.Comm (Management Accounting) (Hons)<br>
+                    ACMA
+                </h4>
             </div>
             <div class="content-container">
                 <img src="images/team/pikkie.jpg">
