--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                 <h3>Contact one of our business managers to discuss your unique finance requirements and put our solution-driven approach to the test.</h3>
                 <h3 class="text-1"><span class="text-2">Physical address: </span>18 Papegaai Street, Stellenbosch, 7600</h3>
                 <h3 class="text-1"><span class="text-2">Email: </span>info@capitalharvest.co.za</h3>
-                <h3 class="text-1"><span class="text-2">Tel: </span>+27 21 886 7030 | <span class="text-2">Fax: </span>+27 21 886 7036</h3>
+                <h3 class="text-1"><span class="text-2">Tel: </span>+27 21 886 7030</h3>
                 <h3 class="text-1"><span class="text-2">Postal address: </span>PO Box 12309, Die Boord, Stellenbosch, 7613</h3>
             </div>
             <iframe
