--- a/what-we-offer.html
+++ b/what-we-offer.html
@@ -131,7 +131,7 @@
                     financing, our products are bespoke, and we approach risks relating to agriculture in a
                     manner that most commercial banks simply cannot do.<br><br>
 
-                    We further place an emphasis on building sustainable and lasting relationships with our
+                    We place an emphasis on building sustainable and lasting relationships with our
                     clients as well as taking ownership of every transaction that we finance.<br><br>
                 </h3>
                 <h2>Term loans</h2>
@@ -143,7 +143,7 @@
                 </h3>
                 <h2><br>Revolving credit facilities</h2>
                 <h3>
-                    Capital Harvest does not have current accounts and can thus not offer overdraft facilities. As
+                    Capital Harvest does not have current account facilities and can thus not offer overdraft facilities. As
                     an alternative we have a revolving credit facility which operates similar to an overdraft. A
                     facility is made available in accordance with the client’s cash flow needs (which replaces the
                     client’s overdraft held at a commercial bank) and is reviewed on an annual basis. Funds are
