--- a/who-we-are.html
+++ b/who-we-are.html
@@ -132,21 +132,19 @@
                     huge need across all farming types, and we knew commercial banks were not providing the
                     necessary financial solutions. Over the past 18 years, Capital Harvest has established itself
                     as a preferred agriculture financier, managing agriculture debt of R3 billion, and providing
-                    our clients with:<br><br>
+                    our clients with:<br>
+                        <li>Access to a team of 19 qualified and experienced personnel;</li>
 
-                    <li>Access to a team of 19 qualified and experienced personnel;</li>
+                        <li>Formalised sales, credit, risk, and compliance processes based on banking best practices;</li>
 
-                    <li>Formalised sales, credit, risk, and compliance processes based on banking best practices;</li>
+                        <li>Market beating turn-around time in terms of the approval of finance applications;</li>
 
-                    <li>Market beating turn-around time in terms of the approval of finance applications;</li>
-
-                    <li>Financial solutions and products which are agriculture specific with terms and conditions
-                        aligned to the underlying cash flow stream of specific areas of agriculture;</li>
-
-                    <li>Dedicated financial solutions for the developing farmer market.</li><br>
+                        <li>Financial solutions and products which are agriculture specific with terms and conditions
+                            aligned to the underlying cash flow stream of specific areas of agriculture;</li>
+                    <br>
 
                     In the past, the group sourced its funding predominantly from the Land and Agricultural
-                    Development Bank of South African (“Land Bank”), however, the significant liquidity
+                    Development Bank of South Africa, however, the significant liquidity
                     challenges which Land Bank faced in 2020 compelled us to source alternative funding.<br><br>
 
                     In April 2021, we were successful in raising R1 billion on the capital markets through our
