--- a/our-team.html
+++ b/our-team.html
@@ -209,6 +209,12 @@
                 <h4>B.Comm</h4>
             </div>
             <div class="content-container">
+                <img src="images/team/ilse.jpg">
+                <h2>Ilse Martin</h2>
+                <h3>Business Analyst</h3>
+                <h4>B.Comm</h4>
+            </div>
+            <div class="content-container">
                 <img src="images/team/nadine.jpg">
                 <h2>Nadine Solomons</h2>
                 <h3>Risk Portfolio Manager</h3>
