--- a/our-team.html
+++ b/our-team.html
@@ -119,160 +119,177 @@
     </div>
     <div id="section-6" class="sections">
         <h1 id="heading-1">Our team</h1>
-        <h2 id="heading-2">Board of directors</h2>
         <div id="container-1" class="containers">
-            <div class="content-container">
-                <img src="images/team/elias.jpg">
-                <h2>Elias Masilela</h2>
-                <h3>Executive Chariman</h3>
-                <h4>
-                    BA Social Sciences<br>
-                    M Social Sciences in Economic Policy and Analysis
-                </h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/johan.jpg">
-                <h2>Johan du Toit</h2>
-                <h3>Joint Chief Executive Officer (Operations)</h3>
-                <h4>
-                    B.Comm (Agric economics)<br>
-                    Hons B&A, MBA
-                </h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/faans.jpg">
-                <h2>Faans Roos</h2>
-                <h3>Joint Chief Executive Officer (Finance)</h3>
-                <h4>
-                    B.Acc (Hons)<br>
-                    CA (SA)
-                </h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/christiaan.jpg">
-                <h2>Christiaan Buys</h2>
-                <h3>Director: Risk Management</h3>
-                <h4>BSc (Maths)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/piet.jpg">
-                <h2>Piet Krynauw</h2>
-                <h3>
-                    Non-executive Director<br>
-                    (Chairman of the Credit Committee)
-                </h3>
-                <h4>
-                    B.Comm<br>
-                    Hons B&A, MBA
-                </h4>
+            <div class="directors-containers">
+                <h2 id="heading-2" class="headings">Board of directors</h2>
+                <div class="content-container">
+                    <img src="images/team/elias.jpg">
+                    <h2>Elias Masilela</h2>
+                    <h3>Executive Chariman</h3>
+                    <h4>
+                        BA Social Sciences<br>
+                        M Social Sciences in Economic Policy and Analysis
+                    </h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/johan.jpg">
+                    <h2>Johan du Toit</h2>
+                    <h3>Joint Chief Executive Officer (Operations)</h3>
+                    <h4>
+                        B.Comm (Agric economics)<br>
+                        Hons B&A, MBA
+                    </h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/faans.jpg">
+                    <h2>Faans Roos</h2>
+                    <h3>Joint Chief Executive Officer (Finance)</h3>
+                    <h4>
+                        B.Acc (Hons)<br>
+                        CA (SA)
+                    </h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/christiaan.jpg">
+                    <h2>Christiaan Buys</h2>
+                    <h3>Director: Risk Management</h3>
+                    <h4>BSc (Maths)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/piet.jpg">
+                    <h2>Piet Krynauw</h2>
+                    <h3>
+                        Non-executive Director<br>
+                        (Chairman of the Credit Committee)
+                    </h3>
+                    <h4>
+                        B.Comm<br>
+                        Hons B&A, MBA
+                    </h4>
+                </div>
             </div>
         </div>
         <h2 id="heading-3">Staff</h2>
         <div id="container-2" class="containers">
-            <div class="content-container">
-                <img src="images/team/albert.jpg">
-                <h2>Albert Smith</h2>
-                <h3>Credit Head - Alternate director to F Roos and J du Toit</h3>
-                <h4>
-                    B.Comm (Management Accounting) (Hons)<br>
-                    ACMA
-                </h4>
+            <div class="staff-containers-2">
+                <h2 id="heading-4" class="headings">Relationship management</h2>
+                <div class="content-container">
+                    <img src="images/team/pikkie.jpg">
+                    <h2>Pikkie Swart</h2>
+                    <h3>Head of Operations</h3>
+                    <h4>B.Econ (Hons)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/morne.jpg">
+                    <h2>Morne Rossouw</h2>
+                    <h3>Portfolio Manager</h3>
+                    <h4>Diploma (Banking)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/jp.jpg">
+                    <h2>JP Brand</h2>
+                    <h3>Business Manager</h3>
+                    <h4>B.Comm (Banking)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/willie.jpg">
+                    <h2>Willie De Lange</h2>
+                    <h3>Corporate Business Manager</h3>
+                    <h4>B.Comm (Commercial accounting)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/derek.jpg">
+                    <h2>Derek Maas</h2>
+                    <h3>Business Analyst</h3>
+                    <h4>B.Comm</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/ilse.jpg">
+                    <h2>Ilse Martin</h2>
+                    <h3>Business Analyst</h3>
+                    <h4>B.Comm</h4>
+                </div>
             </div>
-            <div class="content-container">
-                <img src="images/team/pikkie.jpg">
-                <h2>Pikkie Swart</h2>
-                <h3>Head of Operations</h3>
-                <h4>B.Econ (Hons)</h4>
+            <div class="staff-containers-1">
+                <h2 id="heading-5" class="headings">Credit</h2>
+                <div class="content-container">
+                    <img src="images/team/albert.jpg">
+                    <h2>Albert Smith</h2>
+                    <h3>Credit Head - Alternate director to F Roos and J du Toit</h3>
+                    <h4>
+                        B.Comm (Management Accounting) (Hons)<br>
+                        ACMA
+                    </h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/pierre.jpg">
+                    <h2>Pierre Fourie</h2>
+                    <h3>Credit Manager</h3>
+                    <h4>B.Comm (Management)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/melinda.jpg">
+                    <h2>Melinda Leib</h2>
+                    <h3>Credit Manager</h3>
+                    <h4>B.Comm</h4>
+                </div>
             </div>
-            <div class="content-container">
-                <img src="images/team/morne.jpg">
-                <h2>Morne Rossouw</h2>
-                <h3>Business Manager</h3>
-                <h4>Diploma (Banking)</h4>
+            <div class="staff-containers-2">
+                <h2 id="heading-6" class="headings">Risk and compliance</h2>
+                <div class="content-container">
+                    <img src="images/team/marelise.jpg">
+                    <h2>Marelise Conradie</h2>
+                    <h3>Legal Manager</h3>
+                    <h4>B.Comm (Legal)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/nadine.jpg">
+                    <h2>Nadine Solomons</h2>
+                    <h3>Risk Portfolio Manager</h3>
+                    <h4>National Diploma: Management</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/marinda.jpg">
+                    <h2>Marinda Huysamen</h2>
+                    <h3>Compliance Manager</h3>
+                    <h4></h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/jo-ann.jpg">
+                    <h2>Jo-Ann Louw</h2>
+                    <h3>Compliance Official</h3>
+                    <h4></h4>
+                </div>
             </div>
-            <div class="content-container">
-                <img src="images/team/jp.jpg">
-                <h2>JP Brand</h2>
-                <h3>Business Manager</h3>
-                <h4>B.Comm (Banking)</h4>
+            <div class="staff-containers-1">
+                <h2 id="heading-7" class="headings">Finance, treasury and IT</h2>
+                <div class="content-container">
+                    <img src="images/team/celeste.jpg">
+                    <h2>Celeste Andries</h2>
+                    <h3>Financial Manager</h3>
+                    <h4>CA (SA)</h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/maree.jpg">
+                    <h2>Maree Nortje</h2>
+                    <h3>Treasury Admin Manager</h3>
+                    <h4></h4>
+                </div>
+                <div class="content-container">
+                    <img src="images/team/chani.jpg">
+                    <h2>Chani Liebenberg</h2>
+                    <h3>IT Manager</h3>
+                    <h4>B.Comm (Agric) (Hons)</h4>
+                </div>
             </div>
-            <div class="content-container">
-                <img src="images/team/willie.jpg">
-                <h2>Willie De Lange</h2>
-                <h3>Corporate Business Manager</h3>
-                <h4>B.Comm (Commercial accounting)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/derek.jpg">
-                <h2>Derek Maas</h2>
-                <h3>Business Analyst</h3>
-                <h4>B.Comm</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/ilse.jpg">
-                <h2>Ilse Martin</h2>
-                <h3>Business Analyst</h3>
-                <h4>B.Comm</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/nadine.jpg">
-                <h2>Nadine Solomons</h2>
-                <h3>Risk Portfolio Manager</h3>
-                <h4>National Diploma: Management</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/pierre.jpg">
-                <h2>Pierre Fourie</h2>
-                <h3>Credit Manager</h3>
-                <h4>B.Comm (Management)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/melinda.jpg">
-                <h2>Melinda Leib</h2>
-                <h3>Credit Manager</h3>
-                <h4>B.Comm</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/celeste.jpg">
-                <h2>Celeste Andries</h2>
-                <h3>Financial Manager</h3>
-                <h4>CA (SA)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/marelise.jpg">
-                <h2>Marelise Conradie</h2>
-                <h3>Legal Manager</h3>
-                <h4>B.Comm (Legal)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/chani.jpg">
-                <h2>Chani Liebenberg</h2>
-                <h3>IT Manager</h3>
-                <h4>B.Comm (Agric) (Hons)</h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/maree.jpg">
-                <h2>Maree Nortje</h2>
-                <h3>Treasury Admin Manager</h3>
-                <h4></h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/marinda.jpg">
-                <h2>Marinda Huysamen</h2>
-                <h3>Compliance Manager</h3>
-                <h4></h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/jo-ann.jpg">
-                <h2>Jo-Ann Louw</h2>
-                <h3>Compliance Official</h3>
-                <h4></h4>
-            </div>
-            <div class="content-container">
-                <img src="images/team/abigail.jpg">
-                <h2>Abigail Rhoda</h2>
-                <h3>Receptionist</h3>
-                <h4></h4>
+            <div class="staff-containers-1">
+                <h2 id="heading-8" class="headings">Administration</h2>
+                <div class="content-container">
+                    <img src="images/team/abigail.jpg">
+                    <h2>Abigail Rhoda</h2>
+                    <h3>Receptionist</h3>
+                    <h4></h4>
+                </div>
             </div>
         </div>
     </div>
