--- a/our-team.html
+++ b/our-team.html
@@ -125,7 +125,7 @@
                 <div class="content-container">
                     <img src="images/team/elias.jpg">
                     <h2>Elias Masilela</h2>
-                    <h3>Executive Chariman</h3>
+                    <h3>Executive Chairman</h3>
                     <h4>
                         BA Social Sciences<br>
                         M Social Sciences in Economic Policy and Analysis
